# obsaw

./: .gitignore  LICENSE  README.md  pyproject.toml
src/obsaw/: __init__.py  instrument.py  otel.py  recorder.py  store.py
tests/: test_instrument.py  test_otel.py  test_recorder.py  test_store.py
