[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsaw"
version = "0.1.0"
description = "Observability for websaw_ng — a DuckDB-backed request-metrics store + built-in viewer, plus optional OpenTelemetry (OTLP) export. Instruments ombott/websaw via request hooks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "KellerKev", email = "kellerkev@gmail.com" }]
keywords = ["observability", "metrics", "opentelemetry", "otlp", "duckdb", "ombott", "websaw"]
dependencies = ["duckdb>=0.10"]

[project.urls]
Homepage = "https://github.com/KellerKev/obsaw"
Repository = "https://github.com/KellerKev/obsaw"

[project.optional-dependencies]
otel = ["opentelemetry-sdk>=1.24", "opentelemetry-exporter-otlp-proto-http>=1.24"]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/obsaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.dependencies]
python = "3.13.*"
pytest = ">=8"
pip = "*"
duckdb = ">=0.10"

[tool.pixi.pypi-dependencies]
obsaw = { path = ".", editable = true }
ombott-ng = { path = "../ombott", editable = true }        # for the instrumentation test (lazy import)
opentelemetry-sdk = ">=1.24"
opentelemetry-exporter-otlp-proto-http = ">=1.24"

[tool.pixi.tasks]
test = "pytest -q"
